@@ -2,8 +2,10 @@
 version 0.x.y - dd-mmm-yyyy
  . Action: Animate was using the wrong index. Possible crash fixed
  . Demos: IntervalDemo using relative path for plist.info file
+ . Demos: added filter to TcpAccelClient (by Brian Hammond)
  . Misc: Removed sound support. Not part of cocos2d
  . Misc: Moved OpenGLSupport inside the cocos2d directory. cocos2d.h includes OpenGLSupport headers
+ . Misc: added getCocos2dVersion() function
  . Particles: It was (mistakenly) using Z coordinate
  . Sprite: added setDisplayFrame selector
 
